--- a/styles/style.css
+++ b/styles/style.css
@@ -17,8 +17,8 @@
   width: 1px;
   height: 1px;
   position: absolute;
-  top: 0px;
-  left: 0px;
+  top: 0;
+  left: 0;
   margin: -1px;
   clip: rect(0,0,0,0);
   white-space: nowrap;
